@@ -1,6 +1,7 @@
 CHANGELOG Roundcube Webmail
 ===========================
 
+- Fix setting title for truncated subject in IE (#1487128)
 - Fix handling of links with IP address
 - Fix compacting folder resets message list filter (#1488076)
 - Fix displaying multipart/alternative messages with only one part (#1487938)
